--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -3,6 +3,9 @@
         "statics": {
             "txtUntil": "fr:bis",
             "txtFilter": "fr:Filter",
+            "titleAddLayer": "fr:Layer",
+            "titleAddLayerFilter": "fr:Layerfilter",
+            "textUnknownLayer": "fr:Unbekannt"
         }
     },
     "Koala.util.String": {
